--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "proxy": "http://localhost:3000",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22"
   }
 }
